// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with a single expense 1`] = `
<div>
  <p>
    Viewing 
    1
     expense
     totalling 
    $2.35
  </p>
</div>
`;

exports[`should render ExpensesSummary with an expense array 1`] = `
<div>
  <p>
    Viewing 
    2
     expense
    s
     totalling 
    $9.99
  </p>
</div>
`;
